<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/firstFragment">

    <fragment
        android:id="@+id/firstFragment"
        android:name="com.antonio.recauderiaefiquehay.fragments.HomeFragment"
        android:label="@string/bienvenido_string"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_firstFragment_to_secondFragment"
            app:destination="@id/secondFragment" />
    </fragment>
    <fragment
        android:id="@+id/secondFragment"
        android:name="com.antonio.recauderiaefiquehay.fragments.CatalogoFragment"
        android:label="@string/catalogo_articulos"
        tools:layout="@layout/fragment_catalogo" />
    <fragment
        android:id="@+id/thirdFragment"
        android:name="com.antonio.recauderiaefiquehay.fragments.SugerenciaArticuloFragment"
        android:label="@string/sugerencia_string"
        tools:layout="@layout/fragment_sugerencia_articulo" />

</navigation>